# repo_ros2_course_2025

./: README.md  _config.yml
ros2_ws/src/s2_cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/s2_cpp_pubsub/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/s2_py_pubsub/: package.xml  setup.cfg  setup.py
ros2_ws/src/s2_py_pubsub/s2_py_pubsub/: publisher_base.py  subscriber.py
ros2_ws/src/s3_cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/s3_cpp_srvcli/src/: client.cpp  client_sp.cpp  server.cpp  server_sp.cpp
ros2_ws/src/s3_py_srvcli/: package.xml  setup.cfg  setup.py
ros2_ws/src/s3_py_srvcli/s3_py_srvcli/: client.py  server.py
ros2_ws/src/s4_cpp_apps/: CMakeLists.txt  package.xml
ros2_ws/src/s4_cpp_apps/src/: client.cpp  publisher.cpp  server.cpp  subscriber.cpp
ros2_ws/src/s4_custom_interface/: CMakeLists.txt  package.xml
ros2_ws/src/s4_custom_interface/msg/: HardwareStatus.msg
ros2_ws/src/s4_py_apps/: package.xml  setup.cfg  setup.py
ros2_ws/src/s4_py_apps/s4_py_apps/: client.py  publisher.py  server.py  subscriber.py
ros2_ws/src/s5_cpp_camera/: CMakeLists.txt  package.xml
ros2_ws/src/s5_cpp_camera/config/: camera_params.yaml
ros2_ws/src/s5_cpp_camera/launch/: camera_launch.py
ros2_ws/src/s5_cpp_camera/src/: camera.cpp
ros2_ws/src/s5_cpp_camera_usr/: CMakeLists.txt  package.xml
ros2_ws/src/s5_cpp_camera_usr/src/: camera_usr.cpp
ros2_ws/src/s5_py_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/s5_py_camera/config/: camera_params.yaml
ros2_ws/src/s5_py_camera/launch/: camera_launch.py
ros2_ws/src/s5_py_camera/s5_py_camera/: camera.py
ros2_ws/src/s5_py_camera_usr/: package.xml  setup.cfg  setup.py
ros2_ws/src/s5_py_camera_usr/s5_py_camera_usr/: camera_usr.py
ros2_ws/src/s6_cpp_urdf/: CMakeLists.txt  package.xml
ros2_ws/src/s6_cpp_urdf/launch/: cylinder_launch.py  r2d2_launch.py  rdk_x3_robot_launch.py  wheel_launch.py
ros2_ws/src/s6_cpp_urdf/rviz/: r2d2_2.rviz  rdk_x3_robot.rviz  wheel.rviz
ros2_ws/src/s6_cpp_urdf/src/: cylinder.cpp  r2d2.cpp  rdk_x3_robot.cpp  wheel.cpp
ros2_ws/src/s6_cpp_urdf/urdf/: cylinder.urdf  r2d2.urdf  r2d2_2.urdf  rdk_x3_robot.urdf  robot.urdf  wheel.urdf
ros2_ws/src/s6_py_urdf/: package.xml  setup.cfg  setup.py
ros2_ws/src/s6_py_urdf/coordinate_frames/: wheel_frames
ros2_ws/src/s6_py_urdf/launch/: cylinder_launch.py  r2d2_launch.py  rdk_x3_robot_launch.py  wheel_launch.py
ros2_ws/src/s6_py_urdf/rviz/: cylinder.rviz  r2d2_2.rviz  rdk_x3_robot.rviz
ros2_ws/src/s6_py_urdf/s6_py_urdf/: cylinder.py  r2d2.py  rdk_x3_robot.py  wheel.py
ros2_ws/src/s6_py_urdf/urdf/: r2d2.urdf  rdk_x3_robot.urdf  sphere.urdf
ros2_ws/src/s7_py_client_robot/: package.xml
ros2_ws/src/s7_py_client_robot/launch/: client_robots_launch.py
ros2_ws/src/s7_py_client_robot/s7_py_client_robot/: client_robot1.py  client_robot2.py  client_robot3.py  client_robot4.py
ros2_ws/src/s7_py_robot_task_monitoring/: package.xml
ros2_ws/src/s7_py_robot_task_monitoring/launch/: robot_network_launch.py
ros2_ws/src/s7_py_robot_task_monitoring/s7_py_robot_task_monitoring/: cylinders.py  robots.py
ros2_ws/src/s7_robot_network_interface/: CMakeLists.txt  package.xml
ros2_ws/src/s8_py_slam/config/: cartographer_config.lua  mapper_params_online_async.yaml
ros2_ws/src/s8_py_slam/launch/: occupancy_grid_launch.py  spawn_robot.launch.py
(+7 files in other folders)
